[tool.poetry]
name = "textutils"
version = "0.2.0"
homepage = "https://holdenweb.com/"
description = "Acronym maintenance with modern Text User Interface"
authors = ["Steve Holden <steve@holdenweb.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End-users",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
include = [
"textutils from src"
]

[tool.poetry.scripts]
acros = "textutils.acronyms:main"


[tool.poetry.dependencies]
python = "^3.7"
mongoengine = "^0.27.0"
textual-dev = "^1.1.0"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^23.1.0"
mypy = "^1.0.0"
pytest-cov = "^2.12.1"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocstrings-python = "0.10.1"
mkdocs-material = "^9.0.11"
mkdocs-exclude = "^1.0.2"
pre-commit = "^2.13.0"
pytest-aiohttp = "^1.0.4"
time-machine = "^2.6.0"
mkdocs-rss-plugin = "^1.5.0"
httpx = "^0.23.1"
types-setuptools = "^67.2.0.1"
pytest-asyncio = "*"
pytest-textual-snapshot = "0.2.0"

[tool.black]
includes = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
